[package]
name = "crustfs"
version = "0.0.1"
authors = [ "Tupshin Harper <tupshin@tupshin.com" ]

[lib]
name = "crustfs"
path = "src/crustfs.rs"

[[bin]]
name = "mkcrustfs" # the name of the executable to generate
path = "src/bin/mkfs.rs"

[[bin]]
name = "mount-crustfs" # the name of the executable to generate
path = "src/bin/mount-crustfs.rs"

[dependencies.cassandra]
git = "https://github.com/tupshin/rust-cassandra-wrapper"

[dependencies.fuse]
git = "https://github.com/suhr/rust-fuse"

[dependencies.docopt_macros]
git = "git://github.com/docopt/docopt.rs"