[package]
name = "crustfs"
version = "0.0.1"
authors = [ "Tupshin Harper <tupshin@tupshin.com" ]

[lib]
name = "crustfs"
path = "src/crustfs.rs"

[[bin]]
name = "mkcrustfs" # the name of the executable to generate
path = "src/bin/mkfs.rs"

[[bin]]
name = "mount-crustfs" # the name of the executable to generate
path = "src/bin/mount-crustfs.rs"

[dependencies]
# cql-ffi-safe = "*"
docopt_macros = "*"
log = "0.1.10"
time = "0.1.14"
# fuse = "0.2.2"

[dependencies.fuse]
git = "https://github.com/tupshin/rust-fuse"

[dependencies.cql-ffi-safe]
git = "https://github.com/tupshin/cql-ffi-safe"
