[package]
name = "crustfs"
version = "0.0.1"
authors = [ "Tupshin Harper <tupshin@tupshin.com" ]

[lib]
name = "crustfs"
path = "src/crustfs.rs"

[[bin]]
name = "mkcrustfs" # the name of the executable to generate
path = "src/bin/mkfs.rs"

[[bin]]
name = "mount-crustfs" # the name of the executable to generate
path = "src/bin/mount-crustfs.rs"

[dependencies]
cql_ffi = "*"
# docopt_macros = "*"
log = "*"
time = "*"
rand = "*"

[dependencies.fuse]
git = "https://github.com/zargony/rust-fuse.git"

# [dependencies.cql_ffi]
# git = "file:///home/tupshin/workspaces/rust/cql-ffi"